database/postgres/operator/manifests/db-instance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres
  namespace: postgres
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "postgres.benz.in"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres-instance
            port:
              number: 5432
